local-registry-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registry
        deployment: registry
    spec:
      containers:
        - image: docker.io/library/registry:2.8.1
          imagePullPolicy: Never
          name: registry
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/registry
            name: storage
        - name: webui
          image: docker.io/joxit/docker-registry-ui:latest
          imagePullPolicy: Never
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: registry
