local-registry-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: registry
      port: 5000
      protocol: TCP
      targetPort: 5000
      nodePort: 31000
    - name: webui
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 31001
  selector:
    app: registry
    deployment: registry
  sessionAffinity: None
  type: NodePort
