local-registry-deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: registry
  name: default
spec:
  host: default-registry.cluster.local
  port:
    targetPort: registry
  to:
    kind: Service
    name: default
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: registry
  name: webui
spec:
  host: default-registry-ui.cluster.local
  port:
    targetPort: webui
  to:
    kind: Service
    name: default
    weight: 100
  wildcardPolicy: None
